--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
-  <!-- My Style -->
-  <link rel="stylesheet" href="./style/main.css" />
+  <link rel="stylesheet" href="./style/main.css">
 </head>
 
 <body>
@@ -26,41 +25,42 @@
     <div class="container">
         <div class="one">
             <h1 class="one">
-                Hi
+                Yooo
                 <span id="name">Irene</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name btw!</p>
+            <p class="two" id="greetingText">Your name hits different fr fr! 💯</p>
         </div>
 
         <div class="three">
-            <p>It's your birthday!! :D</p>
+            <p>It's your birthday bestie!! 🎉✨</p>
         </div>
 
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                Happy birthday queen! 👑 Hope your day is straight bussin and filled with all the vibes! No cap, you deserve all the happiness and good energy today! May your year be lit AF with endless blessings, main character moments, and zero Ls. Slay this new chapter bestie! 💅✨🎂
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to do.</p>
-            <p class="idea-2">But then I stopped.</p>
+            <p class="idea-1">That's what I was gonna send tbh 📱</p>
+            <p class="idea-2">But then I was like... nah ❌</p>
             <p class="idea-3">
-                I realised, I wanted to do something<br>
-                <strong>special</strong>
-                .
+                I wanted to do something<br>
+                <strong>iconic</strong>
+                ✨
             </p>
-            <p class="idea-4">Because,</p>
+            <p class="idea-4">Because periodt 💅</p>
             <p class="idea-5">
-                You are Special
-                <span>:)</span>
+                You're absolutely goated
+                <span>😤</span>
             </p>
             <p class="idea-6">
-                <span>S</span>
-                <span>O</span>
+                <span>L</span>
+                <span>F</span>
+                <span>G</span>
             </p>
         </div>
 
@@ -68,8 +68,8 @@
             <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
-                <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h3 class="wish-hbd">Happy Birthday! 🎂</h3>
+                <h5 id="wishText">May your life be as fire as your playlist! 🔥🎵</h5>
             </div>
         </div>
 
@@ -142,9 +142,9 @@
         </div>
 
         <div class="nine">
-            <p>Okay, now come back and tell me if you liked it.</p>
-            <p id="replay">Or click, if you want to watch it again.</p>
-            <p class="last-smile">:)</p>
+            <p>Alright bestie, come back and lmk if you vibed with it! 💬</p>
+            <p id="replay">Or click here if you wanna see this again ngl 🔄</p>
+            <p class="last-smile">😊</p>
         </div>
     </div>
 
@@ -153,6 +153,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <!-- Sweetalert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script type="application/javascript" src="./script/main.js"></script>
+    <script src="./script/main.js"></script>
+    
 
 </html>
