Fix HTML formatting in index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
           In fact, this thing made me cringe. HAHA <br>
           But, I just realized, I wanted to do something <br>
               
-                <strong>special</strong>for you.<br>
+                <strong>special</strong><br>
+              for you.<br>
                 
             </p>
             <p class="idea-4">Because,</p>
